==> hathach/tinyusb/src/portable/analog/max32/dcd_max32.c <==
#include "tusb_option.h"
  #include "device/dcd.h"
  #include "mxc_delay.h"
  #include "mxc_device.h"
  #include "mxc_sys.h"
  #include "nvic_table.h"
  #include "usbhs_regs.h"
  #define USBHS_M31_CLOCK_RECOVERY
  #define REQUEST_TYPE_INVALID (0xFFu)

void dcd_init(uint8_t rhport) {
  (void) rhport;
  MXC_USBHS->intrusben |= MXC_F_USBHS_INTRUSBEN_SUSPEND_INT_EN;

  //Interrupt for VBUS disconnect
  MXC_USBHS->mxm_int_en |= MXC_F_USBHS_MXM_INT_EN_NOVBUS;

  NVIC_ClearPendingIRQ(USB_IRQn);
  dcd_edpt_close_all(rhport);

  //Unsuspend the MAC
  MXC_USBHS->mxm_suspend = 0;

  /* Configure PHY */
  MXC_USBHS->m31_phy_xcfgi_31_0 = (0x1 << 3) | (0x1 << 11);
  MXC_USBHS->m31_phy_xcfgi_63_32 = 0;
  MXC_USBHS->m31_phy_xcfgi_95_64 = 0x1 << (72 - 64);
  MXC_USBHS->m31_phy_xcfgi_127_96 = 0;


  #ifdef USBHS_M31_CLOCK_RECOVERY
  MXC_USBHS->m31_phy_noncry_rstb = 1;
  MXC_USBHS->m31_phy_noncry_en = 1;
  MXC_USBHS->m31_phy_outclksel = 0;
  MXC_USBHS->m31_phy_coreclkin = 0;
  MXC_USBHS->m31_phy_xtlsel = 2; /* Select 25 MHz clock */
  #else
  /* Use this option to feed the PHY a 30 MHz clock, which is them used as a PLL reference */
  /* As it depends on the system core clock, this should probably be done at the SYS level */
  MXC_USBHS->m31_phy_noncry_rstb = 0;
  MXC_USBHS->m31_phy_noncry_en = 0;
  MXC_USBHS->m31_phy_outclksel = 1;
  MXC_USBHS->m31_phy_coreclkin = 1;
  MXC_USBHS->m31_phy_xtlsel = 3; /* Select 30 MHz clock */
  #endif
  MXC_USBHS->m31_phy_pll_en = 1;
  MXC_USBHS->m31_phy_oscouten = 1;

  /* Reset PHY */
  MXC_USBHS->m31_phy_ponrst = 0;
  MXC_USBHS->m31_phy_ponrst = 1;

  dcd_connect(rhport);
}

void dcd_set_address(uint8_t rhport, uint8_t dev_addr) {
  (void) rhport;
  (void) dev_addr;
  _dcd.pipe0.buf = NULL;
  _dcd.pipe0.length = 0;
  _dcd.pipe0.remaining = 0;
  /* Clear RX FIFO to return ACK. */
  MXC_USBHS->index = 0;
  MXC_USBHS->csr0 = MXC_F_USBHS_CSR0_SERV_OUTPKTRDY | MXC_F_USBHS_CSR0_DATA_END;
}

void dcd_remote_wakeup(uint8_t rhport) {
  (void) rhport;
  MXC_USBHS->power |= MXC_F_USBHS_POWER_RESUME;

  #if CFG_TUSB_OS != OPT_OS_NONE
  osal_task_delay(10);
  #else
  MXC_Delay(MXC_DELAY_MSEC(10));
  #endif

  MXC_USBHS->power &= ~MXC_F_USBHS_POWER_RESUME;
}

bool dcd_edpt_open(uint8_t rhport, tusb_desc_endpoint_t const *ep_desc) {
  (void) rhport;

  const unsigned ep_addr = ep_desc->bEndpointAddress;
  const unsigned epn = tu_edpt_number(ep_addr);
  const unsigned dir_in = tu_edpt_dir(ep_addr);
  const unsigned xfer = ep_desc->bmAttributes.xfer;
  const unsigned mps = tu_edpt_packet_size(ep_desc);

  TU_ASSERT(epn < TUP_DCD_ENDPOINT_MAX);

  pipe_state_t *pipe = &_dcd.pipe[dir_in][epn - 1];
  pipe->buf = NULL;
  pipe->length = 0;
  pipe->remaining = 0;

  MXC_USBHS->index = epn;

  if (dir_in) {
    MXC_USBHS->inmaxp = mps;
    MXC_USBHS->incsru = (MXC_F_USBHS_INCSRU_DPKTBUFDIS | MXC_F_USBHS_INCSRU_MODE) | ((xfer == TUSB_XFER_ISOCHRONOUS) ? MXC_F_USBHS_INCSRU_ISO : 0);
    if (MXC_USBHS->incsrl & MXC_F_USBHS_INCSRL_INPKTRDY) {
      MXC_USBHS->incsrl = MXC_F_USBHS_INCSRL_CLRDATATOG | MXC_F_USBHS_INCSRL_FLUSHFIFO;
    } else {
      MXC_USBHS->incsrl = MXC_F_USBHS_INCSRL_CLRDATATOG;
    }
    MXC_USBHS->intrinen |= TU_BIT(epn);
  } else {
    MXC_USBHS->outmaxp = mps;
    MXC_USBHS->outcsru = (MXC_F_USBHS_OUTCSRU_DPKTBUFDIS) | ((xfer == TUSB_XFER_ISOCHRONOUS) ? MXC_F_USBHS_OUTCSRU_ISO : 0);
    if (MXC_USBHS->outcsrl & MXC_F_USBHS_OUTCSRL_OUTPKTRDY) {
      MXC_USBHS->outcsrl = MXC_F_USBHS_OUTCSRL_CLRDATATOG | MXC_F_USBHS_OUTCSRL_FLUSHFIFO;
    } else {
      MXC_USBHS->outcsrl = MXC_F_USBHS_OUTCSRL_CLRDATATOG;
    }
    MXC_USBHS->introuten |= TU_BIT(epn);
  }

  return true;
}

bool dcd_edpt_xfer(uint8_t rhport, uint8_t ep_addr, uint8_t *buffer, uint16_t total_bytes) {
  (void) rhport;
  bool ret;
  unsigned const epnum = tu_edpt_number(ep_addr);
  MXC_SYS_Crit_Enter();
  if (epnum) {
    _dcd.pipe_buf_is_fifo[tu_edpt_dir(ep_addr)] &= ~TU_BIT(epnum - 1);
    ret = edpt_n_xfer(rhport, ep_addr, buffer, total_bytes);
  } else
    ret = edpt0_xfer(rhport, ep_addr, buffer, total_bytes);
  MXC_SYS_Crit_Exit();
  return ret;
}

bool dcd_edpt_xfer_fifo(uint8_t rhport, uint8_t ep_addr, tu_fifo_t *ff, uint16_t total_bytes) {
  (void) rhport;
  bool ret;
  unsigned const epnum = tu_edpt_number(ep_addr);
  TU_ASSERT(epnum);
  MXC_SYS_Crit_Enter();
  _dcd.pipe_buf_is_fifo[tu_edpt_dir(ep_addr)] |= TU_BIT(epnum - 1);
  ret = edpt_n_xfer(rhport, ep_addr, (uint8_t *) ff, total_bytes);
  MXC_SYS_Crit_Exit();
  return ret;
}

void dcd_edpt_stall(uint8_t rhport, uint8_t ep_addr) {
  (void) rhport;
  unsigned const epn = tu_edpt_number(ep_addr);
  MXC_SYS_Crit_Enter();
  MXC_USBHS->index = epn;
  if (0 == epn) {
    if (!ep_addr) { /* Ignore EP80 */
      _dcd.setup_packet.bmRequestType = REQUEST_TYPE_INVALID;
      _dcd.pipe0.buf = NULL;
      MXC_USBHS->csr0 = MXC_F_USBHS_CSR0_SEND_STALL;
    }
  } else {
    if (tu_edpt_dir(ep_addr)) { /* IN */
      MXC_USBHS->incsrl = MXC_F_USBHS_INCSRL_SENDSTALL;
    } else { /* OUT */
      TU_ASSERT(!(MXC_USBHS->outcsrl & MXC_F_USBHS_OUTCSRL_OUTPKTRDY), );
      MXC_USBHS->outcsrl = MXC_F_USBHS_OUTCSRL_SENDSTALL;
    }
  }
  MXC_SYS_Crit_Exit();
}

void dcd_edpt_clear_stall(uint8_t rhport, uint8_t ep_addr) {
  (void) rhport;
  unsigned const epn = tu_edpt_number(ep_addr);
  MXC_SYS_Crit_Enter();
  MXC_USBHS->index = epn;
  if (tu_edpt_dir(ep_addr)) { /* IN */
    /* IN endpoint */
    if (MXC_USBHS->incsrl & MXC_F_USBHS_INCSRL_INPKTRDY) {
      /* Per musbhsfc_pg, only flush FIFO if IN packet loaded */
      MXC_USBHS->incsrl = MXC_F_USBHS_INCSRL_CLRDATATOG | MXC_F_USBHS_INCSRL_FLUSHFIFO;
    } else {
      MXC_USBHS->incsrl = MXC_F_USBHS_INCSRL_CLRDATATOG;
    }
  } else { /* OUT */
    /* Otherwise, must be OUT endpoint */
    if (MXC_USBHS->outcsrl & MXC_F_USBHS_OUTCSRL_OUTPKTRDY) {
      /* Per musbhsfc_pg, only flush FIFO if OUT packet is ready */
      MXC_USBHS->outcsrl = MXC_F_USBHS_OUTCSRL_CLRDATATOG | MXC_F_USBHS_OUTCSRL_FLUSHFIFO;
    } else {
      MXC_USBHS->outcsrl = MXC_F_USBHS_OUTCSRL_CLRDATATOG;
    }
  }
  MXC_SYS_Crit_Exit();
}

void dcd_int_handler(uint8_t rhport) {
  uint_fast8_t is, txis, rxis;
  uint32_t mxm_int, mxm_int_en, mxm_is;
  uint32_t saved_index;

  /* Save current index register */
  saved_index = MXC_USBHS->index;

  is = MXC_USBHS->intrusb;   /* read and clear interrupt status */
  txis = MXC_USBHS->intrin;  /* read and clear interrupt status */
  rxis = MXC_USBHS->introut; /* read and clear interrupt status */

  /* These USB interrupt flags are W1C. */
  /* Order of volatile accesses must be separated for IAR */
  mxm_int = MXC_USBHS->mxm_int;
  mxm_int_en = MXC_USBHS->mxm_int_en;
  mxm_is = mxm_int & mxm_int_en;
  MXC_USBHS->mxm_int = mxm_is;

  is &= MXC_USBHS->intrusben; /* Clear disabled interrupts */

  if (mxm_is & MXC_F_USBHS_MXM_INT_NOVBUS) {
    dcd_event_bus_signal(rhport, DCD_EVENT_UNPLUGGED, true);
  }
  if (is & MXC_F_USBHS_INTRUSB_SOF_INT) {
    dcd_event_bus_signal(rhport, DCD_EVENT_SOF, true);
  }
  if (is & MXC_F_USBHS_INTRUSB_RESET_INT) {
    process_bus_reset(rhport);
  }
  if (is & MXC_F_USBHS_INTRUSB_RESUME_INT) {
    dcd_event_bus_signal(rhport, DCD_EVENT_RESUME, true);
  }
  if (is & MXC_F_USBHS_INTRUSB_SUSPEND_INT) {
    dcd_event_bus_signal(rhport, DCD_EVENT_SUSPEND, true);
  }

  txis &= MXC_USBHS->intrinen; /* Clear disabled interrupts */
  if (txis & MXC_F_USBHS_INTRIN_EP0_IN_INT) {
    process_ep0(rhport);
    txis &= ~TU_BIT(0);
  }
  while (txis) {
    unsigned const num = __builtin_ctz(txis);
    process_edpt_n(rhport, tu_edpt_addr(num, TUSB_DIR_IN));
    txis &= ~TU_BIT(num);
  }
  rxis &= MXC_USBHS->introuten; /* Clear disabled interrupts */
  while (rxis) {
    unsigned const num = __builtin_ctz(rxis);
    process_edpt_n(rhport, tu_edpt_addr(num, TUSB_DIR_OUT));
    rxis &= ~TU_BIT(num);
  }

  /* Restore register index before exiting ISR */
  MXC_USBHS->index = saved_index;
}
